feat: style for section checkList

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,7 @@
 @import "_variables";
 @import "_prism";
 @import "_dev-tools";
+@import "_check-list";
 @import url('https://fonts.googleapis.com/css?family=Rubik:400,700&display=swap&subset=latin-ext');
 
 // keyframes
