--- a/src/scss/_dev-tools.scss
+++ b/src/scss/_dev-tools.scss
@@ -24,19 +24,19 @@
     content: " </>";
     display: flex;
     justify-content: center;
+    position: absolute;
+    right: 10px;
+    bottom: 0;
+    transform: translateY(90px) rotate(15deg);
     margin-top: 8px;
-    transform: rotate(15deg);
     background: -webkit-linear-gradient(#eee, #333);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 80px;
     font-weight: 600;
-    position: absolute;
-    right: 10px;
-    bottom: 0;
-    transform: translateY(90px);
     transition: transform .3s ease;
+    opacity: 0.3;
 }
 
 @mixin link {
