--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -136,18 +136,6 @@ body {
   background: #FFFFEA;
   background-size: 20px 20px;
   background-image: linear-gradient(to right, #e9f0f0 1px, transparent 1px), linear-gradient(to bottom, #e9f0f0 1px, transparent 1px);
-
-  @media (min-width: 768px) and (orientation: portrait) {
-    font-size: 1.2rem;
-  }
-
-  @media (min-width: 768px) and (orientation: portrait) {
-    font-size: 1.6rem;
-  }
-
-  @media (min-width: 1366px) {
-    font-size: 1.4rem;
-  }
 }
 
 /*button menu */
@@ -207,11 +195,6 @@ body {
       animation-fill-mode: both;
     }
   }
-}
-
-.article__button.article__button--position {
-  left: 0;
-  transform: rotate(0deg);
 }
 
 .menu-on {
@@ -413,15 +396,12 @@ body {
     animation: 200ms 500ms linear both heroHeader;
     margin: 0;
 
-    @media (min-width: 1024px) {
-      font-size: 3rem;
-    }
-
-    @media (min-width: 1366px) {
+    @media (min-width: 1184px) {
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 3rem;
+      font-size: 40px;
+      line-height: 56px
     }
 
     &::after {
@@ -435,13 +415,13 @@ body {
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
 
-      @media (min-width: 1366px) {
+      @media (min-width: 1184px) {
         margin: 20px;
       }
     }
   }
 
-  @media (min-width: 1366px) {
+  @media (min-width: 1184px) {
     background: rgb(78, 204, 111);
     background: -moz-radial-gradient(circle, rgba(78, 204, 111, 1) 0%, rgba(255, 255, 255, 0) 62%);
     background: -webkit-radial-gradient(circle, rgba(78, 204, 111, 1) 0%, rgba(255, 255, 255, 0) 62%);
@@ -452,13 +432,21 @@ body {
 
 // article
 .article {
+  @media(min-width: 1184px) {
+    width: 100%;
+    max-width: 1184px;
+    margin: 0 auto;
+
+  }
+
   &__header {
     margin: 44px 0 60px 0;
     font-weight: 500;
     text-align: center;
 
-    @media (min-width: 1366px) {
-      margin: 20px 20px;
+    @media (min-width: 1184px) {
+      font-size: 36px;
+      line-height: 48px
     }
   }
 
@@ -470,7 +458,7 @@ body {
   }
 
   &__menu {
-    @media (min-width: 1366px) {
+    @media (min-width: 1184px) {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -492,6 +480,16 @@ body {
     transform-origin: top;
     transition: transform 0.3s ease-out;
 
+    @media (min-width: 1184px) {
+      flex-direction: row;
+      justify-content: center;
+      width: 100%;
+      height: auto;
+      padding: 0;
+      margin: 10px;
+      transform: none;
+    }
+
     &--on {
       height: auto;
       transform: scaleY(1);
@@ -504,7 +502,7 @@ body {
     }
 
     &::after {
-      @media (min-width: 1366px) {
+      @media (min-width: 1184px) {
         content: "\25BA";
         display: block;
         font-size: 2rem;
@@ -513,23 +511,12 @@ body {
         animation: heroHeader 1s linear 1.5s infinite alternate both;
       }
     }
-
-    @media (min-width: 1366px) {
-      flex-direction: row;
-      justify-content: center;
-      width: 100%;
-      max-width: 1100px;
-      height: auto;
-      padding: 0;
-      margin: 10px;
-      transform: none;
-    }
   }
 
   &__item {
     width: 100%;
 
-    @media (min-width: 1366px) {
+    @media (min-width: 1184px) {
       width: auto;
     }
   }
@@ -538,15 +525,17 @@ body {
     display: block;
     text-decoration: none;
     text-transform: uppercase;
-    color: black;
+    color: #171F3F;
     padding: 8px;
     text-align: center;
     transition: background-color .2s linear;
+    font-size: 20px;
+    line-height: 36px;
 
     &:hover {
       background-color: rgba(0, 0, 0, 0.15);
 
-      @media (min-width: 1366px) {
+      @media (min-width: 1184px) {
         color: #1a1a1a;
       }
     }
@@ -557,21 +546,23 @@ body {
     line-height: 26px;
     text-align: center;
 
-    @media (min-width: 1366px) {
-      max-width: 800px;
+    @media (min-width: 1184px) {
+      max-width: 1184px;
       width: 100%;
       margin: 20px auto;
+      font-size: 20px;
+      line-height: 36px;
     }
   }
 
   &__button {
-    @media (min-width: 1366px) {
+    left: 0;
+    transform: rotate(0deg);
+    z-index: 2;
+
+    @media (min-width: 1184px) {
       display: none;
     }
-  }
-
-  @media (min-width: 1366px) {
-    font-size: 1.2rem;
   }
 }
 
@@ -585,29 +576,36 @@ body {
   padding-top: 80px;
 
   &__header {
-    margin: 0 0 8px;
+    margin: 0 0 48px;
     padding-bottom: 12px;
     font-size: 22px;
     font-weight: 500;
     line-height: 32px;
     border-bottom: 2px solid #CBD2D9;
 
-    @media (min-width: 1366px) {
-      margin: 8px 0;
+    &--space {
+      padding-top: 80px;
+    }
+
+    @media (min-width: 1184px) {
+      font-size: 32px;
+      line-height: 44px;
     }
   }
 
   &__paragraph {
     line-height: 26px;
 
-    @media (min-width: 1366px) {
-      margin: 8px 0;
-
-      &--position {
-        @media (min-width: 1366px) {
-          text-align: center;
-        }
+    &--position {
+      @media (min-width: 1184px) {
+        text-align: center;
       }
+    }
+
+    @media (min-width: 1184px) {
+      font-size: 20px;
+      line-height: 36px;
+      margin: 36px 0;
     }
   }
 
@@ -619,8 +617,10 @@ body {
       list-style-type: none;
     }
 
-    @media (min-width: 1366px) {
-      margin: 10px 10px 10px 30px;
+    @media (min-width: 1184px) {
+      margin: 16px 10px 16px 30px;
+      font-size: 18px;
+      line-height: 40px;
     }
   }
 
@@ -632,9 +632,8 @@ body {
     padding: 16px;
     font-size: 0.8rem;
 
-    @media (min-width: 1366px) {
+    @media (min-width: 1184px) {
       width: fit-content;
-      font-size: 1rem;
     }
   }
 
@@ -649,18 +648,30 @@ body {
     color: #0b862a;
     font-weight: 500;
     text-decoration-line: underline;
+    font-size: 16px;
     line-height: 26px;
     outline: none;
+
+    @media(min-width:1184px) {
+      font-size: 18px;
+      font-size: 18px;
+      line-height: 40px;
+    }
 
     &::before {
       content: "";
       position: absolute;
-      top: 4px;
+      top: 10px;
       left: 0;
       width: 16px;
       height: 16px;
       background: url('../assets/img/link.svg') no-repeat 100% 0;
       background-size: cover;
+
+      @media(min-width: 1184px) {
+        width: 18px;
+        height: 18px;
+      }
     }
   }
 
@@ -679,11 +690,6 @@ body {
     height: 100%;
     border: 0;
   }
-
-  @media (min-width: 1366px) {
-    padding-top: 80px;
-    margin-bottom: 40px;
-  }
 }
 
 // card
@@ -698,6 +704,12 @@ body {
     font-size: 22px;
     font-weight: 500;
     color: #52606D;
+
+    @media(min-width: 1184px) {
+      margin: 30px 24px;
+      font-size: 28px;
+      line-height: 40px;
+    }
   }
 
   &__link {
@@ -723,6 +735,15 @@ body {
       height: 16px;
       background: url('../assets/img/link.svg') no-repeat 100% 0;
       background-size: cover;
+
+      @media (min-width: 1184px) {
+        top: 12px;
+      }
+    }
+
+    @media (min-width: 1184px) {
+      font-size: 18px;
+      line-height: 40px;
     }
   }
 
@@ -732,6 +753,11 @@ body {
     &--no-style {
       padding: 0;
       list-style-type: none;
+    }
+
+    @media (min-width: 1184px) {
+      font-size: 18px;
+      line-height: 40px;
     }
   }
 
@@ -744,28 +770,28 @@ body {
     font-size: 0.8rem;
     word-break: break-word;
 
-    @media (min-width: 1366px) {
+    @media (min-width: 1184px) {
       display: inline-block;
-      font-size: 1rem;
     }
   }
 
   &__paragraph {
-    @media (min-width: 1366px) {
-      margin: 10px 0;
+    @media (min-width: 1184px) {
+      margin: 10px 0 10px 24px;
+      font-size: 18px;
+      line-height: 40px;
     }
   }
 
   &__list {
-    @media (min-width: 1366px) {
+    @media (min-width: 1184px) {
       margin: 10px 10px 10px 30px;
     }
   }
 
-  @media (min-width: 1366px) {
-    padding: 10px;
-    margin: 5px;
-    border-radius: 5px;
+  @media (min-width: 1184px) {
+    padding: 16px 16px 46px;
+    border-radius: 4px;
   }
 }
 
@@ -851,6 +877,11 @@ code[class*=language-],
 pre[class*=language-] {
   margin: 16px 0;
   white-space: pre-line;
+
+  @media(min-width: 1184px) {
+    margin: 16px 0 16px 24px;
+    font-size: 18px;
+  }
 }
 
 .image {
@@ -862,7 +893,7 @@ pre[class*=language-] {
     width: 20%;
   }
 
-  @media (min-width: 1366px) {
+  @media (min-width: 1184px) {
     width: auto;
     max-width: 1100px;
     margin: 10px auto;
@@ -876,12 +907,4 @@ pre[class*=language-] {
 
 .wrong {
   color: red;
-}
-
-@media (min-width: 1366px) {
-  .wrapper {
-    max-width: 1100px;
-    width: 100%;
-    margin: 0 auto;
-  }
 }
