feat: updated style for menu

--- a/src/scss/_game.scss
+++ b/src/scss/_game.scss
@@ -14,7 +14,7 @@
 
 @mixin list {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     grid-gap: 50px 50px;
     list-style-type: none;
     padding: 0;
@@ -96,6 +96,10 @@
 
     &__list {
         @include list;
+
+        @media(min-width: 360px) {
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        }
 
     }
 
